updating, edit, and delete ui bad